objects/Account.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>DiscountPercentage__c</fullName>
        <formula>DiscountRate__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DiscountPercentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>DiscountRate__c</fullName>
        <label>DiscountRate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>EmailField__c</fullName>
        <label>EmailField</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Giacomo__c</fullName>
        <label>Giacomo</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews><recordTypes>
        <fullName>GiacomoRecordType</fullName>
        <active>true</active>
        <label>GiacomoRecordType</label>
    </recordTypes></CustomObject>